Additional API.  Now BitCask.open, close, get, put works.